[project]
name = "pysecfw"
version = "0.1.0"
description = "python security toolkit for penetration testing."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "boto3>=1.7.84",
    "boto3-stubs>=1.40.59",
    "fastapi>=0.119.1",
    "jinja2>=3.1.6",
    "mypy>=1.18.2",
    "pluggy>=1.6.0",
    "pre-commit>=4.3.0",
    "prompt-toolkit>=3.0.52",
    "pydantic>=2.12.0",
    "pytest>=8.4.2",
    "pyyaml>=6.0.1",
    "requests>=2.32.0",
    "rich>=14.2.0",
    "typer>=0.12.0",
    "types-pyyaml>=6.0.12.20250915",
    "types-requests>=2.32.4.20250913",
    "uvicorn>=0.38.0",
    "virtualenv>=20.35.1",
]

[project.scripts]
pysecfw = "pysecfw.main:main"
